[IOBP-1478] Moved fiscal code into body (#71)
